[package]

name = "hyper"
version = "0.10.0-a.0"
description = "A modern HTTP library."
readme = "README.md"
documentation = "http://hyperium.github.io/hyper"
repository = "https://github.com/hyperium/hyper"
license = "MIT"
authors = ["Sean McArthur <sean.monstar@gmail.com>",
           "Jonathan Reem <jonathan.reem@gmail.com>"]
keywords = ["http", "hyper", "hyperium"]

[dependencies]
httparse = "1.0"
language-tags = "0.2"
log = "0.3"
mime = "0.2"
rotor = "0.6"
rustc-serialize = "0.3"
spmc = "0.3.0"
time = "0.1"
unicase = "1.0"
url = "1.0"
vecio = "0.1"

[dependencies.cookie]
version = "0.3"
default-features = false

[dependencies.openssl]
version = "0.7"
optional = true



[dependencies.security-framework]
version = "2.7.0"
optional = true

[dependencies.serde]
version = "0.8"
optional = true

[dev-dependencies]
env_logger = "0.3"
num_cpus = "1.0"

[features]
default = ["ssl"]
ssl = ["openssl"]
serde-serialization = ["serde", "mime/serde"]
nightly = []
